# Software

./: .gitattributes  .gitignore  README.md  general-instructions-for-data-access  pyproject.toml
.github/workflows/: snakemake-pipeline.yml
DataBase/: metadata.py
condor_submit/container/: muraves-sing.def
condor_submit/profile/: config.yaml
dev/compare_cpp_py_outputs/: compare_root_distributions.py  compare_root_event_debug.py
dev/good_runs/: good_runs_stat.ipynb  good_runs_stat.py
dev/pca_analysis/: base.py  pca_analysis.ipynb  pca_analysis.py  pca_mapper.py
environment/: README.md
environment/docker/: Dockerfile  entrypoint.sh  run_muraves_env.sh  setup_muraves.sh
muraves/: pyproject.toml
muraves/monitoring/: create_db.py  monitoring.ipynb  parse_time_run.ipynb  plots.py  test_plotly.ipynb  utils_yo.py
muraves/tracks_reconstruction/: README.md  SearchFileName.py  Snakefile  config.yaml
muraves/utils/: __init__.py  root_wrapper.py  run_manager.py
muraves_lib/: __init__.py  file_handler.py  root_wrapper.py  run_manager.py  snakefile_helper.py
tag/: requirements.yaml  tag.notes
tracks_reconstruction/: Snakefile  config.yaml
tracks_reconstruction/1_Parser/: evtParserGPBLU.py  evtParserGPROSSO.py  evtParserGP_NERO.py  parserer.py  prep.py
tracks_reconstruction/2_PreRec/: MakePedestalTree.py  script_Preanalysis.py
tracks_reconstruction/3_PedAna/: MURAVES_PedestalAnalysis.sh  OnePhE_evaluator.py  OnePhe_evaluator.cpp
tracks_reconstruction/4_MainRecSof/: ClusterLists.h  EvaluateAngularCoordinates.cc  MURAVES_reco_v2.cpp  MURAVESanalysis.sh  (+2 more)
(+38 files in other folders)
