[project]

name = "muraves-lib"   # nome del package (a tua scelta)
version = "0.0.0"
description = "Project for analysis and monitoring of MuRaVes data"
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["muraves_lib"]   # i pacchetti che vuoi includere

